# Subway-Surf

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Virtual_controller.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
UnityGame/: CREDITS.md  README.md  build_unity_windows.ps1  run_game_with_cv.ps1  run_tests.ps1
UnityGame/Assets/Editor/: BuildProject.cs
UnityGame/Assets/MergedGame/Scripts/: MergedEndlessRunnerBootstrap.cs
UnityGame/Assets/Scenes/: Main.unity
UnityGame/Assets/SubwayOriginal/Scripts/: CameraController.cs  ChunkSpawnerManager.cs  CoinController.cs  EnemyController.cs  ForceReceiver.cs  GameDifficultyManager.cs  GameManager.cs  InputControls.cs  InputControls.inputactions  InputReader.cs  IntroEnemyAnimation.cs  MotionControllerOverlay.cs  MovingTrainTrigger.cs  MovingTrains.cs  NoFog.shader  PlayerController.cs  ScoreManager.cs  SimpleFollowerController.cs  WorldCurveManager.cs
UnityGame/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
dashboard/: app.js  game.css  game.html  game.js  index.html  styles.css
profiles/: default.json
src/: __init__.py  ports.py
src/api/: app.py  schemas.py  security.py
src/app/: __init__.py  runner.py
src/core/: __init__.py  controller.py  detector.py
src/domain/: __init__.py  actions.py  models.py
src/infrastructure/: __init__.py  camera.py  keyboard_adapter.py
src/services/: gesture_service.py  profile_service.py  telemetry_service.py
src/ui/: __init__.py  display.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_api.py  test_config.py  test_controller.py  test_gesture_service.py  test_models.py  test_profile_service.py  test_telemetry_service.py
