[project]
name = "subway-surf-motion-controller"
version = "3.1.0"
description = "Gesture-based virtual controller for Subway Surfers using MediaPipe and OpenCV"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mediapipe", "opencv", "computer-vision", "game-controller", "gesture-recognition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.scripts]
subway-surf = "main:main"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() in default args
    "RUF012", # ClassVar annotation in dataclasses
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "Virtual_controller\\.py"]

[[tool.mypy.overrides]]
module = ["cv2.*", "mediapipe.*", "pygetwindow.*", "pynput.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-q --tb=short"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
